force-app/main/default/objects/nFORCE__Business_Process_Settings__c/nFORCE__Business_Process_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This object provides administrators the ability to specify business process settings.</description>
    <label>Business Process Settings</label>
</CustomObject>