force-app/main/default/objects/nFORCE__Business_Process_Settings__c/fields/nFORCE__Apex_Jobs_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Apex_Jobs_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Administrators populate this optional number field to specify the number of records to submit per batch. By default, it is 200.</description>
    <inlineHelpText>This specifies the number of records to submit per batch.</inlineHelpText>
    <label>Apex Jobs Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>