force-app/main/default/objects/nFORCE__Business_Process_Settings__c/fields/nFORCE__Disable_New_Business_Activities__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Disable_New_Business_Activities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this optional checkbox field that, when set to true, disables the system&apos;s ability to process new business activities. By default, it is false.</description>
    <inlineHelpText>Select to disable new business activities.</inlineHelpText>
    <label>Disable New Business Activities</label>
    <type>Checkbox</type>
</CustomField>