force-app/main/default/objects/nFORCE__Business_Process_Settings__c/fields/nFORCE__Enable_Telemetry__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Enable_Telemetry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this optional checkbox field that, when set to true, enables the use of telemetry. The default is false.</description>
    <inlineHelpText>Select to enable telemetry.</inlineHelpText>
    <label>Enable Telemetry</label>
    <type>Checkbox</type>
</CustomField>