force-app/main/default/objects/nFORCE__Business_Process_Settings__c/fields/nFORCE__Log_Level_To_Capture__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Log_Level_To_Capture__c</fullName>
    <description>Select the appropriate log level to capture for this process. - NONE, ERROR, WARN, INFO, DEBUG, FINE, FINER, FINEST.</description>
    <inlineHelpText>Using this optional field, Administrators can select a log level to capture for the process to communicate what occurred during the execution. The options available are NONE, ERROR, WARN, INFO, DEBUG, FINE, FINER, FINEST.</inlineHelpText>
    <label>Log Level To Capture</label>
    <length>6</length>
    <type>Text</type>
</CustomField>