force-app/main/default/objects/nFORCE__Business_Process_Settings__c/fields/nFORCE__Log_Provider__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Log_Provider__c</fullName>
    <description>Administrators populate this optional text field with the fully qualified Class Name for the ALogProvider extending class.</description>
    <inlineHelpText>Enter the fully-qualified class name for the ALogProvider extending class.</inlineHelpText>
    <label>Log Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>