force-app/main/default/objects/nFORCE__Business_Process_Settings__c/fields/nFORCE__Use_Platform_Events__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Use_Platform_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this required checkbox field that, when set to true, enables the use of platform events. By default, it is false.</description>
    <inlineHelpText>Select to use platform events. If this reaches daily platform event limits, an admin needs to disable this field.</inlineHelpText>
    <label>Use Platform Events</label>
    <type>Checkbox</type>
</CustomField>